// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`controllers -> player getPlayerControllerLogger 1`] = `
Array [
  Object {
    "controller": Object {
      "name": "PlayerController",
    },
    "level": "info",
    "message": "✅test works✅",
    Symbol(level): "info",
    Symbol(message): "{\\"message\\":\\"✅test works✅\\",\\"level\\":\\"info\\",\\"controller\\":{\\"name\\":\\"PlayerController\\"}}",
  },
]
`;

exports[`controllers -> player has known exports 1`] = `
Array [
  "getPlayerControllerLogger",
  "PlayerController",
  "getPlayerRouter",
]
`;

exports[`controllers -> player playRando not found when no sounds 1`] = `undefined`;

exports[`controllers -> player playRando not found when no sounds 2`] = `404`;

exports[`controllers -> player playRando not found when no sounds 3`] = `
Array [
  Object {
    "level": "info",
    "message": Object {
      "method": "playRando",
    },
    Symbol(level): "info",
    Symbol(message): "{\\"message\\":{\\"method\\":\\"playRando\\"},\\"level\\":\\"info\\"}",
  },
]
`;

exports[`controllers -> player playRando not found when no sounds 4`] = `
Array [
  Object {
    "level": "error",
    "message": "sounds.length === 0",
    "method": "playRando",
    Symbol(level): "error",
    Symbol(message): "{\\"message\\":\\"sounds.length === 0\\",\\"method\\":\\"playRando\\",\\"level\\":\\"error\\"}",
  },
]
`;

exports[`controllers -> player playRando plays sound 1`] = `
Object {
  "sound": Object {
    "basename": "mommy shark",
    "filename": "daddy shark",
    "id": "baby_shark",
  },
}
`;

exports[`controllers -> player playRando plays sound 2`] = `200`;

exports[`controllers -> player playRando plays sound 3`] = `
Array [
  Object {
    "level": "info",
    "message": Object {
      "method": "playRando",
    },
    Symbol(level): "info",
    Symbol(message): "{\\"message\\":{\\"method\\":\\"playRando\\"},\\"level\\":\\"info\\"}",
  },
]
`;

exports[`controllers -> player playRando plays sound 4`] = `
Array [
  Object {
    "level": "silly",
    "message": "sounds length",
    "method": "playRando",
    "soundLength": 1,
    Symbol(level): "silly",
    Symbol(message): "{\\"soundLength\\":1,\\"method\\":\\"playRando\\",\\"message\\":\\"sounds length\\",\\"level\\":\\"silly\\"}",
  },
]
`;

exports[`controllers -> player playRando plays sound 5`] = `
Array [
  Object {
    "level": "debug",
    "message": "selected sound",
    "method": "playRando",
    "sound": Object {
      "basename": "mommy shark",
      "filename": "daddy shark",
      "id": "baby_shark",
    },
    Symbol(level): "debug",
    Symbol(message): "{\\"sound\\":{\\"basename\\":\\"mommy shark\\",\\"filename\\":\\"daddy shark\\",\\"id\\":\\"baby_shark\\"},\\"message\\":\\"selected sound\\",\\"method\\":\\"playRando\\",\\"level\\":\\"debug\\"}",
  },
]
`;

exports[`controllers -> player playSound bad request on non-string 1`] = `
Object {
  "soundId": undefined,
}
`;

exports[`controllers -> player playSound bad request on non-string 2`] = `400`;

exports[`controllers -> player playSound bad request on non-string 3`] = `
Array [
  Object {
    "correlationId": "abc123",
    "level": "info",
    "message": "soundId(undefined)",
    "method": "playSound",
    Symbol(level): "info",
    Symbol(message): "{\\"correlationId\\":\\"abc123\\",\\"message\\":\\"soundId(undefined)\\",\\"method\\":\\"playSound\\",\\"level\\":\\"info\\"}",
  },
]
`;

exports[`controllers -> player playSound bad request on non-string 4`] = `
Array [
  Object {
    "correlationId": "abc123",
    "level": "error",
    "message": "soundId !== string",
    "method": "playSound",
    "soundId": undefined,
    Symbol(level): "error",
    Symbol(message): "{\\"correlationId\\":\\"abc123\\",\\"message\\":\\"soundId !== string\\",\\"method\\":\\"playSound\\",\\"level\\":\\"error\\"}",
  },
]
`;

exports[`controllers -> player playSound bad request on non-string 5`] = `
Object {
  "soundId": null,
}
`;

exports[`controllers -> player playSound bad request on non-string 6`] = `400`;

exports[`controllers -> player playSound bad request on non-string 7`] = `
Array [
  Object {
    "correlationId": "abc123",
    "level": "info",
    "message": "soundId(null)",
    "method": "playSound",
    Symbol(level): "info",
    Symbol(message): "{\\"correlationId\\":\\"abc123\\",\\"message\\":\\"soundId(null)\\",\\"method\\":\\"playSound\\",\\"level\\":\\"info\\"}",
  },
]
`;

exports[`controllers -> player playSound bad request on non-string 8`] = `
Array [
  Object {
    "correlationId": "abc123",
    "level": "error",
    "message": "soundId !== string",
    "method": "playSound",
    "soundId": null,
    Symbol(level): "error",
    Symbol(message): "{\\"correlationId\\":\\"abc123\\",\\"soundId\\":null,\\"message\\":\\"soundId !== string\\",\\"method\\":\\"playSound\\",\\"level\\":\\"error\\"}",
  },
]
`;

exports[`controllers -> player playSound bad request on non-string 9`] = `
Object {
  "soundId": false,
}
`;

exports[`controllers -> player playSound bad request on non-string 10`] = `400`;

exports[`controllers -> player playSound bad request on non-string 11`] = `
Array [
  Object {
    "correlationId": "abc123",
    "level": "info",
    "message": "soundId(false)",
    "method": "playSound",
    Symbol(level): "info",
    Symbol(message): "{\\"correlationId\\":\\"abc123\\",\\"message\\":\\"soundId(false)\\",\\"method\\":\\"playSound\\",\\"level\\":\\"info\\"}",
  },
]
`;

exports[`controllers -> player playSound bad request on non-string 12`] = `
Array [
  Object {
    "correlationId": "abc123",
    "level": "error",
    "message": "soundId !== string",
    "method": "playSound",
    "soundId": false,
    Symbol(level): "error",
    Symbol(message): "{\\"correlationId\\":\\"abc123\\",\\"soundId\\":false,\\"message\\":\\"soundId !== string\\",\\"method\\":\\"playSound\\",\\"level\\":\\"error\\"}",
  },
]
`;

exports[`controllers -> player playSound bad request on non-string 13`] = `
Object {
  "soundId": true,
}
`;

exports[`controllers -> player playSound bad request on non-string 14`] = `400`;

exports[`controllers -> player playSound bad request on non-string 15`] = `
Array [
  Object {
    "correlationId": "abc123",
    "level": "info",
    "message": "soundId(true)",
    "method": "playSound",
    Symbol(level): "info",
    Symbol(message): "{\\"correlationId\\":\\"abc123\\",\\"message\\":\\"soundId(true)\\",\\"method\\":\\"playSound\\",\\"level\\":\\"info\\"}",
  },
]
`;

exports[`controllers -> player playSound bad request on non-string 16`] = `
Array [
  Object {
    "correlationId": "abc123",
    "level": "error",
    "message": "soundId !== string",
    "method": "playSound",
    "soundId": true,
    Symbol(level): "error",
    Symbol(message): "{\\"correlationId\\":\\"abc123\\",\\"soundId\\":true,\\"message\\":\\"soundId !== string\\",\\"method\\":\\"playSound\\",\\"level\\":\\"error\\"}",
  },
]
`;

exports[`controllers -> player playSound bad request on non-string 17`] = `
Object {
  "soundId": 1,
}
`;

exports[`controllers -> player playSound bad request on non-string 18`] = `400`;

exports[`controllers -> player playSound bad request on non-string 19`] = `
Array [
  Object {
    "correlationId": "abc123",
    "level": "info",
    "message": "soundId(1)",
    "method": "playSound",
    Symbol(level): "info",
    Symbol(message): "{\\"correlationId\\":\\"abc123\\",\\"message\\":\\"soundId(1)\\",\\"method\\":\\"playSound\\",\\"level\\":\\"info\\"}",
  },
]
`;

exports[`controllers -> player playSound bad request on non-string 20`] = `
Array [
  Object {
    "correlationId": "abc123",
    "level": "error",
    "message": "soundId !== string",
    "method": "playSound",
    "soundId": 1,
    Symbol(level): "error",
    Symbol(message): "{\\"correlationId\\":\\"abc123\\",\\"soundId\\":1,\\"message\\":\\"soundId !== string\\",\\"method\\":\\"playSound\\",\\"level\\":\\"error\\"}",
  },
]
`;

exports[`controllers -> player playSound not found on unknown song 1`] = `
Object {
  "soundId": "unknown",
}
`;

exports[`controllers -> player playSound not found on unknown song 2`] = `404`;

exports[`controllers -> player playSound not found on unknown song 3`] = `
Array [
  Object {
    "correlationId": "abc123",
    "level": "info",
    "message": "soundId(unknown)",
    "method": "playSound",
    Symbol(level): "info",
    Symbol(message): "{\\"correlationId\\":\\"abc123\\",\\"message\\":\\"soundId(unknown)\\",\\"method\\":\\"playSound\\",\\"level\\":\\"info\\"}",
  },
]
`;

exports[`controllers -> player playSound not found on unknown song 4`] = `
Array [
  Object {
    "correlationId": "abc123",
    "level": "error",
    "message": "sound === undefined",
    "soundId": "unknown",
    Symbol(level): "error",
    Symbol(message): "{\\"correlationId\\":\\"abc123\\",\\"soundId\\":\\"unknown\\",\\"message\\":\\"sound === undefined\\",\\"level\\":\\"error\\"}",
  },
]
`;

exports[`controllers -> player playSound plays sound 1`] = `
Object {
  "sound": Object {
    "basename": "mommy shark",
    "filename": "daddy shark",
    "id": "baby_shark",
  },
}
`;

exports[`controllers -> player playSound plays sound 2`] = `200`;

exports[`controllers -> player playSound plays sound 3`] = `
Array [
  Object {
    "correlationId": "abc123",
    "level": "info",
    "message": "soundId(baby_shark)",
    "method": "playSound",
    Symbol(level): "info",
    Symbol(message): "{\\"correlationId\\":\\"abc123\\",\\"message\\":\\"soundId(baby_shark)\\",\\"method\\":\\"playSound\\",\\"level\\":\\"info\\"}",
  },
]
`;

exports[`controllers -> player playSound plays sound 4`] = `
Array [
  Object {
    "correlationId": "abc123",
    "level": "debug",
    "message": "playSound()",
    "sound": Object {
      "basename": "mommy shark",
      "filename": "daddy shark",
      "id": "baby_shark",
    },
    "soundId": "baby_shark",
    Symbol(level): "debug",
    Symbol(message): "{\\"correlationId\\":\\"abc123\\",\\"sound\\":{\\"basename\\":\\"mommy shark\\",\\"filename\\":\\"daddy shark\\",\\"id\\":\\"baby_shark\\"},\\"soundId\\":\\"baby_shark\\",\\"message\\":\\"playSound()\\",\\"level\\":\\"debug\\"}",
  },
]
`;
